telecom-platform/k8s/inventory-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: inventory-service
  namespace: telecom-prod

spec:
  replicas: 2

  selector:
    matchLabels:
      app: inventory-service

  template:
    metadata:
      labels:
        app: inventory-service

    spec:
      containers:
      - name: inventory-service
        image: 575124957588.dkr.ecr.ap-south-1.amazonaws.com/telecom-order-platform:inventory-v1

        ports:
        - containerPort: 8083

        readinessProbe:
          httpGet:
            path: /actuator/health
            port: 8083
          initialDelaySeconds: 20
          periodSeconds: 10

        livenessProbe:
          httpGet:
            path: /actuator/health
            port: 8083
          initialDelaySeconds: 30
          periodSeconds: 15
