telecom-platform/k8s/gateway-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-gateway
  namespace: telecom-prod

spec:
  selector:
    app: api-gateway

  ports:
    - port: 80
      targetPort: 8080

  type: ClusterIP
