telecom-platform/k8s/inventory-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: inventory-service
  namespace: telecom-prod

spec:
  selector:
    app: inventory-service

  ports:
    - port: 80
      targetPort: 8083

  type: ClusterIP
