telecom-platform/k8s/notification-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: notification-service
  namespace: telecom-prod

spec:
  selector:
    app: notification-service

  ports:
    - port: 80
      targetPort: 8084

  type: ClusterIP
