telecom-platform/k8s/payment-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: payment-service
  namespace: telecom-prod

spec:
  selector:
    app: payment-service

  ports:
    - port: 80
      targetPort: 8082

  type: ClusterIP
